--- a/HW2/src/main/resources/bundle_en_EN.properties
+++ b/HW2/src/main/resources/bundle_en_EN.properties
@@ -1,3 +1,4 @@
+language = 1.English 2. Русский
 acquaintance = Your first and last name:
 negative = You are not a conscientious student
 positive = You are a conscientious student
