--- a/HW2/src/main/resources/bundle_en_EN.properties
+++ b/HW2/src/main/resources/bundle_en_EN.properties
@@ -1,7 +1,7 @@
-language = 1.English 2. Русский
+language = Chose language and type it value
 acquaintance = Your first and last name:
 negative = You are not a conscientious student
 positive = You are a conscientious student
 bye = Good luck
 appeal = Respected {0} {1}
-mistake = You entered the wrong answer
+mistake = Wrong answer
